samples/_failures_safe/1761529438_c236d7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5e251469.c: In function ‘main’:
./samples/SAFE/__tmp_5e251469.c:155:12: error: missing terminating " character
  155 |     printf("\n
      |            ^~~
./samples/SAFE/__tmp_5e251469.c:155:5: error: expected expression at end of input
  155 |     printf("\n
      |     ^~~~~~
./samples/SAFE/__tmp_5e251469.c:155:5: error: expected declaration or statement at end of input
